--- a/css/estilos.css
+++ b/css/estilos.css
@@ -222,7 +222,7 @@ figure {
   margin: 10px 10px;
   background-size: 50px 50px;
 }
-.social-link.facebook {
+.social-link.github {
   background-image: url('../images/facebook.svg');
 }
 .social-link.linkedin {
